Partial Update to Base 1.41
Needs to update the food and the maps.