@@ -84,7 +84,7 @@ public class EntityViewFactory {
 				}
 			}
 
-			final EntityView<IEntity> en = entityClass.newInstance();
+			final EntityView<IEntity> en = entityClass.getDeclaredConstructor().newInstance();
 			en.initialize(entity);
 
 			return en;
@@ -155,7 +155,7 @@ public class EntityViewFactory {
 		register("item", "special", "mithril clasp", Item2DView.class);
 		register("item", null, null, Item2DView.class);
 		register("npc", null, null, NPC2DView.class);
-		register("training_dummy", null, null, NPC2DView.class);
+		register("training_dummy", null, null, TrainingDummy2DView.class);
 
 		register("cat", null, null, Pet2DView.class);
 		register("pet", null, null, Pet2DView.class);
@@ -203,6 +203,8 @@ public class EntityViewFactory {
 		register("item", "ring", null, Ring2DView.class);
 		register("item", "ring", "emerald-ring", BreakableRing2DView.class);
 		register("item", "ring", "wedding", UseableRing2DView.class);
+
+		register("item", "book", "bestiary", UseableGenericItem2DView.class);
 
 		register("useable_entity", null, null, UseableEntity2DView.class);
 
